# rule-gen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
src/: budgeter.js  cli.js  detector.js  gemini.js  scanner.js  writer.js
test/: cli.test.js  detector.test.js  integration.test.js
test-projects/django-sample/: requirements.txt
test-projects/django-sample/myapp/: models.py  serializers.py  views.py
test-projects/django-sample/myproject/: settings.py
test-projects/django-sample/tests/: test_models.py
test-projects/fastapi-sample/: main.py  pyproject.toml  test_main.py
test-projects/flask-sample/: app.py  requirements.txt  test_app.py
